<resources>
    <string name="app_name">SDG - IFPR</string>
    <string name="nome">Nome</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="salvar">Salvar</string>
    <string name="password_dica">******</string>
    <string name="TextoBoasVindas">Bem vindo!</string>
    <string name="textoConsulta">Bem vindo de Volta</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nomeUsuario">nome_do_usuario_logado</string>
    <string name="emailUsuario">email_do_usuario@servidor.com</string>



</resources>