<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.tads.projetointegrador.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/imagem2" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TextoBoasVindas"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/senha"
        android:inputType="textPassword"
        android:hint="@string/password_dica"/>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true">

    <Button
        android:text="Logar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:id="@+id/btnLogar"/>
    <Button
        android:text="Cadastrar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnCadastrar"
        android:layout_gravity="left"
        android:onClick="sendMessage"
        android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>